1.4.0 (21-05-2020)
- New Feature: Profile association with any object

1.3.1 (12-05-2020)
- Bug fix: Fixed permissions delete

1.3.0 (05-03-2020)
- New feature: Support for Java 11

1.2.4 (24-02-2020)
- Bug fix: Fixed permission cache

1.2.3 (09-12-2019)
- Bug fix: Fixed Initialization
- Bug fix: Fixed creation method with expression validator

1.2.2 (06-12-2019)
- Improvement: Added cache to permissions

1.2.1 (04-12-2019)
- Improvement: Added is customExpressionValidator to profiles

1.2.0 (11-10-2019)
- Improvement: Added is locked to profiles and permissions

1.1.0 (07-10-2019)
- Refactor: Changed the name from string to localizedString of profile and permissions
- Refactor: Changed manager to restricted
- Improvement: Verify if code already exists, for profile and permission creation

1.0.0 (25-09-2019)
- Initial version release